* vm_core.h: add rb_thread_t::local_storage_recursive_hash   to speed up Thread#[:__recursive_key__] access.   [Bug #10511] * thread.c (threadptr_local_aref): add fast path for   :__recursive_data__. * thread.c (threadptr_recursive_hash, threadptr_recursive_hash_set):   add special accessor for recursive hash. * cont.c: store/restore local_storage_recursive_hash. * vm.c: init and mark local_storage_recursive_hash. * vm_trace.c (rb_threadptr_exec_event_hooks_orig): clear and restore   local_storage_recursive_hash directly.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@48596 b2dd03c8-39d4-4d8f-98ff-823fe69b080e