cont.c
@@ -459,6 +459,7 @@ cont_init(rb_context_t *cont, rb_thread_t *th)
     cont->saved_thread.machine.stack_maxsize = th->machine.stack_maxsize;
     cont->saved_thread.fiber = th->fiber;
     cont->saved_thread.local_storage = 0;
+    cont->saved_thread.local_storage_recursive_hash = Qnil;
 }
 
 static rb_context_t *
@@ -563,6 +564,7 @@ cont_restore_thread(rb_context_t *cont)
 	th->stack = sth->stack;
 	th->stack_size = sth->stack_size;
 	th->local_storage = sth->local_storage;
+	th->local_storage_recursive_hash = sth->local_storage_recursive_hash;
 	th->fiber = (rb_fiber_t*)cont;
     }
 
@@ -1208,6 +1210,7 @@ fiber_init(VALUE fibval, VALUE proc)
     th->cfp->me = 0;
     th->tag = 0;
     th->local_storage = st_init_numtable();
+    th->local_storage_recursive_hash = Qnil;
 
     th->first_proc = proc;
 
