vm_core.h
@@ -690,6 +690,7 @@ typedef struct rb_thread_struct {
 
     /* storage */
     st_table *local_storage;
+    VALUE local_storage_recursive_hash;
 
     rb_thread_list_t *join_list;
 
@@ -1141,9 +1142,6 @@ void rb_threadptr_exec_event_hooks_and_pop_frame(struct rb_trace_arg_struct *tra
 
 #define EXEC_EVENT_HOOK_AND_POP_FRAME(th_, flag_, self_, id_, klass_, data_) \
   EXEC_EVENT_HOOK_ORIG(th_, flag_, self_, id_, klass_, data_, 1)
-
-VALUE rb_threadptr_reset_recursive_data(rb_thread_t *th);
-void rb_threadptr_restore_recursive_data(rb_thread_t *th, VALUE old);
 
 RUBY_SYMBOL_EXPORT_BEGIN
 
